--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "devDependencies": {
     "@11ty/eleventy-navigation": "^0.3.2",
     "eleventy-plugin-reading-time": "^0.0.1",
+    "luxon": "^2.3.0",
     "markdown-it": "^12.3.2",
     "markdown-it-anchor": "^8.4.1",
     "markdown-it-replace-link": "^1.1.0"
