--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "luxon": "^2.3.0",
     "markdown-it": "^12.3.2",
     "markdown-it-anchor": "^8.4.1",
-    "markdown-it-replace-link": "^1.1.0"
+    "markdown-it-replace-link": "^1.1.0",
+    "d3": "^7.4.4"
   }
 }
