add: support for embedded notes

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -63,5 +63,8 @@
   },
   "[html]": {
     "editor.defaultFormatter": "vscode.html-language-features"
+  },
+  "[css]": {
+    "editor.defaultFormatter": "vscode.css-language-features"
   }
 }
