--- a/package.json
+++ b/package.json
@@ -1,11 +1,14 @@
 {
   "devDependencies": {
     "@11ty/eleventy-navigation": "^0.3.2",
+    "d3": "^7.4.4",
     "eleventy-plugin-reading-time": "^0.0.1",
     "luxon": "^2.3.0",
     "markdown-it": "^12.3.2",
     "markdown-it-anchor": "^8.4.1",
+    "markdown-it-link-attributes": "^4.0.0",
+    "markdown-it-regexp": "^0.4.0",
     "markdown-it-replace-link": "^1.1.0",
-    "d3": "^7.4.4"
+    "slugify": "^1.6.5"
   }
 }
