--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "luxon": "^2.3.0",
     "markdown-it": "^12.3.2",
     "markdown-it-anchor": "^8.4.1",
+    "markdown-it-footnote": "^3.0.3",
     "markdown-it-link-attributes": "^4.0.0",
     "markdown-it-regexp": "^0.4.0",
     "markdown-it-replace-link": "^1.1.0",
