--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@ assets/images/*
 !assets/images/circles.svg
 !assets/images/tree.svg
 !assets/styles/
+!assets/scripts/
 node_modules/
 protected/
 .obsidian/
