--- a/package.json
+++ b/package.json
@@ -13,5 +13,10 @@
     "markdown-it-regexp": "^0.4.0",
     "markdown-it-replace-link": "^1.1.0",
     "slugify": "^1.6.5"
+  },
+  "dependencies": {
+    "@11ty/eleventy": "^1.0.2",
+    "express": "^4.18.2",
+    "front-matter": "^4.0.2"
   }
 }
