--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@11ty/eleventy": "^2.0.1",
     "express": "^4.18.2",
-    "front-matter": "^4.0.2"
+    "front-matter": "^4.0.2",
+    "multer": "^1.4.5-lts.1"
   }
 }
